--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,18 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.gian2.apperitivogmm.Login">
+    android:paddingLeft="18px"
+    android:paddingRight="18px"
+    android:background="#000000"
+    tools:context="com.example.gian2.apperitivogmm.activities.Login">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingTop="100px"
+        android:orientation="vertical">
+        <TextView
+            android:gravity="center"
+            android:layout_width="300dp"
+            android:layout_height="70dp"
+            android:layout_gravity="center"
+            android:text="@string/titolo_login"
+            android:textSize="25dp"
+            android:textColor="#f2edc4"/>
+        <EditText
+            android:gravity="center"
+            android:textColor="#faf7f7"
+            android:textColorHint="#fff"
+            android:background="@drawable/edittextstyle"
+            android:layout_marginTop="60dp"
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:hint="Inserisci username..."
+            android:id="@+id/username"
+            android:layout_marginBottom="30dp"/>
+        <Button
 
-</android.support.constraint.ConstraintLayout>
+            android:textColor="#fff"
+            android:background="@drawable/buttonstyleselector"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:textSize="20dp"
+            android:text="@string/bottone_accesso"
+            android:id="@+id/accedi"/>
+
+        <Button
+            android:textColor="#fff"
+            android:background="@drawable/buttonstyleselector"
+            android:layout_marginTop="80dp"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_gravity="left"
+            android:textSize="15dp"
+            android:text="@string/bottone_creazione"
+            android:id="@+id/crea"
+            />
+
+
+    </LinearLayout>
+
+</LinearLayout>
