--- a/app/src/main/res/layout/activity_ordina.xml
+++ b/app/src/main/res/layout/activity_ordina.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingTop="10px"
+        android:id="@+id/pietanze"
         android:orientation="vertical">
 
         <TextView
