--- a/app/src/main/res/layout/activity_ordina.xml
+++ b/app/src/main/res/layout/activity_ordina.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:auto="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:id="@+id/ScrollView01"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:paddingLeft="18px"
     android:paddingRight="18px"
     android:background="#000000"
@@ -29,4 +30,4 @@
 
     </LinearLayout>
 
-</LinearLayout>
+</ScrollView>
