Creazione iniziale bottone conferma

--- a/app/src/main/res/layout/activity_ordina.xml
+++ b/app/src/main/res/layout/activity_ordina.xml
@@ -25,7 +25,11 @@
             android:textSize="20dp"
             />
 
-
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:text="@string/conferma_ordine"
+            android:background="@drawable/buttonstyle"/>
 
 
     </LinearLayout>
