--- a/app/src/main/res/layout/activity_ordina.xml
+++ b/app/src/main/res/layout/activity_ordina.xml
@@ -2,9 +2,9 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:auto="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:id="@+id/ScrollView01"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
     android:paddingLeft="18px"
     android:paddingRight="18px"
     android:background="#000000"
@@ -25,13 +25,24 @@
             android:textSize="20dp"
             />
 
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:text="@string/conferma_ordine"
-            android:background="@drawable/buttonstyle"/>
+            android:id="@+id/ordina"
+            android:text="@string/conferma_ordine"/>
+
 
 
     </LinearLayout>
+
+
+
+
+
+
+
+
+
 
 </ScrollView>
