Aggiunta modifica quantita in conferma ordine. Manca solo da inserire tali dati nel database e abbiamo concluso il tutto in java

--- a/app/src/main/res/layout/activity_conferma_ordine.xml
+++ b/app/src/main/res/layout/activity_conferma_ordine.xml
@@ -16,6 +16,13 @@
         android:paddingTop="10px"
         android:id="@+id/pietanze"
         android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_marginTop="20dp"
+            android:textColor="@color/colorAccent"
+            android:text="@string/conferma"
+            android:textSize="18dp"/>
 
 
 
