--- a/app/src/main/res/drawable/buttonstyleclicked.xml
+++ b/app/src/main/res/drawable/buttonstyleclicked.xml
@@ -2,6 +2,6 @@
 <shape
     android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#f16a82" />
+    <solid android:color="#f7edef" />
 
 </shape>
