--- a/app/src/main/res/layout/activity_ordina.xml
+++ b/app/src/main/res/layout/activity_ordina.xml
@@ -1,48 +1,31 @@
-<?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:auto="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/ScrollView01"
-    android:paddingLeft="18px"
-    android:paddingRight="18px"
-    android:background="#000000"
-    tools:context="com.example.gian2.apperitivogmm.activities.Login">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingTop="10px"
-        android:id="@+id/pietanze"
-        android:orientation="vertical">
-
-        <TextView
+        <ListView
+            android:id="@+id/menu"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:textColor="#FFF"
-            android:id="@+id/titolo"
-            android:textSize="20dp"
+            android:layout_height="wrap_content"
+            android:dividerHeight="1dp"
+            />
+
+        <Button
+            android:id="@+id/conferma"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/menu"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/conferma_ordine"
+            android:textStyle="bold|italic"
+            android:textColor="#3d5afe"
+            android:typeface="serif"
+            android:background="#ffffff"
             />
 
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:id="@+id/ordina"
-            android:text="@string/conferma_ordine"/>
-
-
-
-    </LinearLayout>
 
 
 
 
-
-
-
-
-
-
-</ScrollView>
+</RelativeLayout>
