--- a/app/src/main/res/layout/pietanza_ordinata.xml
+++ b/app/src/main/res/layout/pietanza_ordinata.xml
@@ -17,7 +17,7 @@
 
     <EditText
         android:id="@+id/modifica"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/nome"
         android:layout_marginTop="7dp"
