--- a/app/src/main/res/layout/activity_conto.xml
+++ b/app/src/main/res/layout/activity_conto.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,24 +13,40 @@
         android:layout_height="match_parent"
         android:paddingTop="100px"
         android:orientation="vertical">
+        <TextView
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:textSize="15dp"
+            android:textAlignment="center"
+            android:textColor="#ffffff"
+            android:layout_gravity="center"
+            android:id="@+id/info"/>
+         <TextView
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:id="@+id/conto"
+            android:textSize="30dp"
+            android:textAlignment="center"
+            android:textColor="#ffffff"
+            android:layout_gravity="center"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/ordini"
+            android:orientation="vertical">
 
-    <TextView
-        android:layout_width="300dp"
-        android:layout_height="100dp"
-        android:id="@+id/conto"
-        android:textSize="30dp"
-        android:textAlignment="center"
-        android:textColor="#ffffff"
+        </LinearLayout>
 
-        android:layout_gravity="center"/>
-    <Button
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="10dp"
-        android:text="Torna a tavoli"
-        android:id="@+id/torna"/>
+
+        <Button
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:text="Torna a tavoli"
+            android:id="@+id/torna"/>
+
 
     </LinearLayout>
 
-</LinearLayout>
+</ScrollView>
