--- a/app/src/main/res/layout/activity_conto.xml
+++ b/app/src/main/res/layout/activity_conto.xml
@@ -15,6 +15,10 @@
         android:orientation="vertical">
         <TextView
             android:layout_width="300dp"
+
+            android:layout_height="50dp" />
+        <TextView
+            android:layout_width="300dp"
             android:layout_height="50dp"
             android:textSize="15dp"
             android:textAlignment="center"
@@ -29,13 +33,7 @@
             android:textAlignment="center"
             android:textColor="#ffffff"
             android:layout_gravity="center"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/ordini"
-            android:orientation="vertical">
 
-        </LinearLayout>
 
 
         <Button
