--- a/app/src/main/res/layout/activity_conto.xml
+++ b/app/src/main/res/layout/activity_conto.xml
@@ -15,8 +15,8 @@
         android:orientation="vertical">
         <TextView
             android:layout_width="300dp"
-
-            android:layout_height="50dp" />
+            android:layout_height="50dp"
+            />
         <TextView
             android:layout_width="300dp"
             android:layout_height="50dp"
