--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -15,18 +15,32 @@
         android:layout_marginTop="8dp"
         android:orientation="vertical">
 
-       <TextView
-           android:layout_width="match_parent"
-           android:layout_height="30dp"
-           android:textColor="#FFF"
-           android:id="@+id/vedi"
-           android:textSize="20dp"
-           />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="200dp"
+                android:layout_height="30dp"
+                android:textColor="#FFF"
+                android:id="@+id/vedi"
+                android:textSize="20dp"
+                />
+            <Button
+                android:layout_width="150dp"
+                android:layout_height="40dp"
+                android:textSize="10dp"
+                android:background="@drawable/buttonstyleselector"
+                android:textColor="#ffffff"
+                android:text="Ordini completati"/>
+
+        </LinearLayout>
+
 
         <Button
             android:id="@+id/tavolo1"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/bg_circle"
