--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="18px"
     android:paddingRight="18px"
     android:background="#000000"
-    tools:context="com.example.gian2.apperitivogmm.activities.Login">
+    tools:context="com.example.gian2.apperitivogmm.activities.RegisterActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
