--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="18px"
     android:paddingRight="18px"
     android:background="#000000"
-    tools:context="com.example.gian2.apperitivogmm.activities.Login">
+    tools:context="com.example.gian2.apperitivogmm.activities.CameriereActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,168 +15,173 @@
         android:layout_marginTop="8dp"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:orientation="horizontal">
+
             <TextView
-                android:layout_width="200dp"
+                android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:textColor="#FFF"
                 android:id="@+id/vedi"
                 android:textSize="20dp"
+                android:layout_gravity="center"
                 />
-            <Button
-                android:layout_width="150dp"
-                android:layout_height="40dp"
-                android:textSize="10dp"
-                android:background="@drawable/buttonstyleselector"
-                android:textColor="#ffffff"
-                android:text="Ordini completati"/>
 
-        </LinearLayout>
+
 
 
         <Button
             android:id="@+id/tavolo1"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginTop="10dp"
+            android:layout_marginLeft="15dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/bg_circle"
             android:gravity="center"
             android:text="1"
             android:textColor="#FFFFFF"
-            android:textSize="50dp" />
+            android:textSize="40dp"/>
 
         <Button
             android:id="@+id/tavolo4"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginTop="10dp"
+            android:layout_marginLeft="15dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/bg_circle"
             android:gravity="center"
             android:text="4"
             android:textColor="#FFFFFF"
-            android:textSize="50dp" />
+            android:textSize="40dp"/>
         <Button
             android:id="@+id/tavolo7"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginTop="10dp"
+            android:layout_marginLeft="15dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/bg_circle"
             android:gravity="center"
             android:text="7"
             android:textColor="#FFFFFF"
-            android:textSize="50dp" />
+            android:textSize="40dp" />
         <Button
             android:id="@+id/tavolo10"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginTop="10dp"
+            android:layout_marginLeft="15dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/bg_circle"
             android:gravity="center"
             android:text="10"
             android:textColor="#FFFFFF"
-            android:textSize="50dp" />
+            android:textSize="40dp" />
 
         <Button
             android:id="@+id/tavolo2"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginLeft="120dp"
-            android:layout_marginTop="-470dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginLeft="135dp"
+            android:layout_marginTop="-390dp"
             android:background="@drawable/bg_circle"
             android:gravity="center"
             android:text="2"
             android:textColor="#FFFFFF"
-            android:textSize="50dp"/>
+            android:textSize="40dp"/>
 
         <Button
             android:id="@+id/tavolo5"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginLeft="120dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginLeft="135dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/bg_circle"
             android:gravity="center"
             android:text="5"
             android:textColor="#FFFFFF"
-            android:textSize="50dp"/>
+            android:textSize="40dp"/>
 
         <Button
             android:id="@+id/tavolo8"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginLeft="120dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginLeft="135dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/bg_circle"
             android:gravity="center"
             android:text="8"
             android:textColor="#FFFFFF"
-            android:textSize="50dp"/>
+            android:textSize="40dp"/>
         <Button
             android:id="@+id/tavolo11"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginLeft="120dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginLeft="135dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/bg_circle"
             android:gravity="center"
             android:text="11"
             android:textColor="#FFFFFF"
-            android:textSize="50dp"/>
+            android:textSize="40dp"/>
 
         <Button
             android:id="@+id/tavolo3"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginLeft="240dp"
-            android:layout_marginTop="-460dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginLeft="255dp"
+            android:layout_marginTop="-380dp"
             android:background="@drawable/bg_circle"
             android:gravity="center"
             android:text="3"
             android:textColor="#FFFFFF"
-            android:textSize="50dp"/>
+            android:textSize="40dp"/>
 
         <Button
             android:id="@+id/tavolo6"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginLeft="240dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginLeft="255dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/bg_circle"
             android:gravity="center"
             android:text="6"
             android:textColor="#FFFFFF"
-            android:textSize="50dp"/>
+            android:textSize="40dp"/>
 
         <Button
             android:id="@+id/tavolo9"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginLeft="240dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginLeft="255dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/bg_circle"
             android:gravity="center"
             android:text="9"
             android:textColor="#FFFFFF"
-            android:textSize="50dp"/>
+            android:textSize="40dp"/>
 
         <Button
             android:id="@+id/tavolo12"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginLeft="240dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginLeft="255dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/bg_circle"
             android:gravity="center"
             android:text="12"
             android:textColor="#FFFFFF"
-            android:textSize="50dp"/>
+            android:textSize="40dp"/>
+
+        <Button
+            android:layout_marginTop="20dp"
+            android:layout_width="150dp"
+            android:layout_height="40dp"
+            android:textSize="10dp"
+            android:background="@drawable/buttonstyleselector"
+            android:textColor="#ffffff"
+            android:layout_gravity="center"
+            android:text="Ordini completati"/>
 
 
 
