creazione dei VediOrdini

--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -180,6 +180,7 @@
             android:textSize="10dp"
             android:background="@drawable/buttonstyleselector"
             android:textColor="#ffffff"
+            android:id="@+id/vedi_ordini"
             android:layout_gravity="center"
             android:text="Ordini completati"/>
 
