--- a/app/src/main/res/layout/activity_conferma_ordine.xml
+++ b/app/src/main/res/layout/activity_conferma_ordine.xml
@@ -2,25 +2,20 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
+
     <ListView
         android:id="@+id/ordine_completo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:dividerHeight="1dp"
+        style="@style/ListGroupStyle"
         />
 
     <Button
         android:id="@+id/conferma"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/ButtonStyle"
         android:layout_alignBottom="@+id/ordine_completo"
-        android:layout_gravity="center_horizontal"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="0dp"
         android:text="@string/conferma_ordine"
-        android:textStyle="bold|italic"
-        android:textColor="#3d5afe"
-        android:typeface="serif"
-        android:background="#ffffff"
-        />
+        android:typeface="serif"/>
 
 
 
