--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -4,9 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="18px"
-    android:paddingRight="18px"
-    android:background="#000000"
     tools:context="com.example.gian2.apperitivogmm.activities.RegisterActivity">
 
     <LinearLayout
@@ -16,60 +13,27 @@
         android:orientation="vertical">
 
         <EditText
-            android:gravity="center"
-            android:textColor="#faf7f7"
-            android:textColorHint="#fff"
-            android:background="@drawable/edittextstyle"
-
-            android:layout_width="300dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center"
+            style="@style/EditTextStyle"
             android:hint="Username..."
             android:id="@+id/usrnm"
-            android:layout_marginBottom="20dp"/>
+            />
         <EditText
-            android:gravity="center"
-            android:textColor="#faf7f7"
-            android:textColorHint="#fff"
-            android:background="@drawable/edittextstyle"
-            android:layout_marginTop="10dp"
-            android:layout_width="300dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center"
+            style="@style/EditTextStyle"
             android:hint="@string/nome"
             android:id="@+id/nome"
-            android:layout_marginBottom="20dp"/>
+            />
         <EditText
-            android:gravity="center"
-            android:textColor="#faf7f7"
-            android:textColorHint="#fff"
-            android:background="@drawable/edittextstyle"
-            android:layout_marginTop="10dp"
-            android:layout_width="300dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center"
+            style="@style/EditTextStyle"
             android:hint="@string/cognome"
             android:id="@+id/cognome"
-            android:layout_marginBottom="20dp"/>
+            />
         <EditText
-            android:gravity="center"
-            android:textColor="#faf7f7"
-            android:textColorHint="#fff"
-            android:background="@drawable/edittextstyle"
-            android:layout_marginTop="10dp"
-            android:layout_width="300dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center"
+            style="@style/EditTextStyle"
             android:hint="@string/numtel"
             android:id="@+id/numtel"
-            android:layout_marginBottom="20dp"/>
+            />
         <Button
-
-            android:textColor="#fff"
-            android:background="@drawable/buttonstyleselector"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
+            style="@style/ButtonStyle"
             android:textSize="20dp"
             android:text="@string/bottone_registrati"
             android:id="@+id/registrati"/>
