--- a/app/src/main/res/layout/pietanza_ordinata.xml
+++ b/app/src/main/res/layout/pietanza_ordinata.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:paddingBottom="50dp"
-    android:background="#3d5afe"
+    style="@style/ListViewStyle"
 
     >
     <TextView
@@ -12,17 +12,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:textSize="17dp"
-        android:textColor="#ffffff"/>
+        android:textSize="17sp"
+        android:textColor="@color/colorAccent"
+        android:background="#FFF"/>
 
     <EditText
         android:id="@+id/modifica"
         android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_height="20dp"
         android:layout_below="@id/nome"
         android:layout_marginTop="7dp"
-        android:textSize="14dp"
-        android:textColor="#ffffff"/>
+        android:textSize="14sp"
+        android:textColor="@color/colorAccent"
+        android:background="#FFF"/>
     <TextView
         android:id="@+id/prezzo"
         android:layout_width="wrap_content"
@@ -30,8 +32,9 @@
         android:layout_alignBaseline="@+id/modifica"
         android:layout_alignBottom="@+id/modifica"
         android:layout_alignParentRight="true"
-        android:textColor="#ffffff"
-        android:textSize="14dp" />
+        android:textColor="@color/colorAccent"
+        android:background="#FFF"
+        android:textSize="14sp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -39,7 +42,8 @@
         android:layout_alignBaseline="@+id/nome"
         android:layout_alignParentRight="true"
         android:id="@+id/quantita"
-        android:textColor="#ffffff"/>
+        android:textColor="@color/colorAccent"
+        android:background="#FFF"/>
 
     />
 </RelativeLayout>
