--- a/app/src/main/res/layout/activity_conferma_ordine.xml
+++ b/app/src/main/res/layout/activity_conferma_ordine.xml
@@ -1,17 +1,17 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical" >
 
     <ListView
         android:id="@+id/ordine_completo"
         style="@style/ListGroupStyle"
+        android:layout_marginBottom="70dp"
         />
 
     <Button
         android:id="@+id/conferma"
         style="@style/ButtonStyle"
-        android:layout_alignBottom="@+id/ordine_completo"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="0dp"
         android:text="@string/conferma_ordine"
@@ -24,4 +24,4 @@
 
 
 
-</RelativeLayout>
+</LinearLayout>
