--- a/app/src/main/res/layout/pietanza_ordinata.xml
+++ b/app/src/main/res/layout/pietanza_ordinata.xml
@@ -6,17 +6,21 @@
     android:paddingBottom="50dp"
     style="@style/ListViewStyle"
 
+
     >
     <TextView
         android:id="@+id/nome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
         android:textStyle="bold"
         android:textSize="17sp"
         android:textColor="@color/colorAccent"
         android:background="#FFF"/>
 
     <EditText
+        android:hint="Modifiche..."
+        android:textColorHint="@color/colorAccent"
         android:id="@+id/modifica"
         android:layout_width="300dp"
         android:layout_height="20dp"
@@ -26,6 +30,8 @@
         android:textColor="@color/colorAccent"
         android:background="#FFF"/>
     <TextView
+        android:layout_marginTop="7dp"
+        android:layout_marginRight="7dp"
         android:id="@+id/prezzo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -37,6 +43,8 @@
         android:textSize="14sp" />
 
     <TextView
+
+        android:layout_marginRight="7dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/nome"
