--- a/app/src/main/res/drawable/textviewstyle.xml
+++ b/app/src/main/res/drawable/textviewstyle.xml
@@ -1,12 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:width="1dp" android:color="#fff" />
     <corners
         android:bottomRightRadius="15dp"
         android:bottomLeftRadius="15dp"
         android:topLeftRadius="15dp"
         android:topRightRadius="15dp"/>
-    <solid android:color="@color/colorSecondary"/>
+    <solid android:color="@color/colorAccent"/>
     <padding android:left="5dp" />
 
 
