--- a/app/src/main/res/layout/activity_conto.xml
+++ b/app/src/main/res/layout/activity_conto.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     android:paddingLeft="18px"
     android:paddingRight="18px"
-    android:background="#3d5afe"
     tools:context="com.example.gian2.apperitivogmm.activities.ContoActivity">
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,47 +13,29 @@
         android:paddingTop="100px"
         android:orientation="vertical">
         <TextView
-            android:layout_width="300dp"
-            android:layout_height="70dp"
-            android:textSize="23dp"
-            android:textAlignment="center"
-            android:textColor="#ffffff"
-            android:layout_gravity="center"
+            android:background="@drawable/textviewstyle"
+            style="@style/TextViewStyle"
             android:id="@+id/info"/>
         <TextView
-            android:layout_width="300dp"
-            android:layout_height="70dp"
-            android:textSize="20dp"
-            android:textAlignment="center"
-            android:textColor="#ffffff"
-            android:layout_gravity="center"
+            android:background="@drawable/textviewstyle"
+            style="@style/TextViewStyle"
             android:id="@+id/conto_senza_modifiche"
             />
         <TextView
-            android:layout_width="300dp"
-            android:layout_height="50dp"
-            android:textSize="20dp"
-            android:textAlignment="center"
-            android:textColor="#ffffff"
-            android:layout_gravity="center"
+            android:background="@drawable/textviewstyle"
+            style="@style/TextViewStyle"
             android:id="@+id/conto_modifiche"
             />
          <TextView
-            android:layout_width="300dp"
-            android:layout_height="50dp"
-            android:id="@+id/conto_totale"
-            android:textSize="20dp"
-            android:textAlignment="center"
-            android:textColor="#ffffff"
-            android:layout_gravity="center"/>
+             android:background="@drawable/textviewstyle"
+             style="@style/TextViewStyle"
+             android:id="@+id/conto_totale"
+            />
 
 
 
         <Button
-            android:layout_width="300dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
+            style="@style/ButtonStyle"
             android:text="Torna a tavoli"
             android:id="@+id/torna"/>
 
