--- a/app/src/main/res/layout/activity_vedi_ordini.xml
+++ b/app/src/main/res/layout/activity_vedi_ordini.xml
@@ -4,17 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="18px"
-    android:paddingRight="18px"
-    android:background="#3d5afe"
-    tools:context="com.example.gian2.apperitivogmm.activities.VediOrdiniActivity">
+    tools:context="com.example.gian2.apperitivogmm.activities.VediOrdiniActivity"
+    android:background="@color/colorPrimary">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingTop="100px"
         android:id="@+id/vedi_ordini"
         android:orientation="vertical">
-
+        <Button
+            android:id="@+id/conferma"
+            style="@style/ButtonStyle"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="0dp"
+            android:text="@string/torna_tavolo"
+            ></Button>
     </LinearLayout>
+
+
+
 
 </ScrollView>
