--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#f47100</color>
-    <color name="colorButton">#3E2723</color>
+    <color name="colorSecondary">#A1887F</color>
     <color name="colorAccent">#082139</color>
 </resources>
