--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,7 +35,7 @@
         <Button
             style="@style/ButtonStyle"
             android:textSize="17dp"
-            android:text="@string/bottone_creazione"
+            android:text="@string/nuovo_profilo"
             android:id="@+id/crea"
             />
 
