--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -34,7 +34,7 @@
             android:gravity="center"
             android:text="1"
             android:textColor="#FFFFFF"
-            android:textSize="55dp" />
+            android:textSize="55sp" />
 
         <Button
             android:id="@+id/tavolo4"
@@ -46,7 +46,7 @@
             android:gravity="center"
             android:text="4"
             android:textColor="#FFFFFF"
-            android:textSize="55dp" />
+            android:textSize="55sp" />
 
         <Button
             android:id="@+id/tavolo7"
@@ -58,7 +58,7 @@
             android:gravity="center"
             android:text="7"
             android:textColor="#FFFFFF"
-            android:textSize="55dp" />
+            android:textSize="55sp" />
 
         <Button
             android:id="@+id/tavolo10"
@@ -70,7 +70,7 @@
             android:gravity="center"
             android:text="10"
             android:textColor="#FFFFFF"
-            android:textSize="55dp" />
+            android:textSize="55sp" />
 
         <Button
             android:id="@+id/tavolo2"
@@ -94,7 +94,7 @@
             android:gravity="center"
             android:text="5"
             android:textColor="#FFFFFF"
-            android:textSize="55dp" />
+            android:textSize="55sp" />
 
         <Button
             android:id="@+id/tavolo8"
@@ -118,7 +118,7 @@
             android:gravity="center"
             android:text="11"
             android:textColor="#FFFFFF"
-            android:textSize="55dp" />
+            android:textSize="55sp" />
 
         <Button
             android:id="@+id/tavolo3"
@@ -130,7 +130,7 @@
             android:gravity="center"
             android:text="3"
             android:textColor="#FFFFFF"
-            android:textSize="55dp" />
+            android:textSize="55sp" />
 
         <Button
             android:id="@+id/tavolo6"
@@ -142,7 +142,7 @@
             android:gravity="center"
             android:text="6"
             android:textColor="#FFFFFF"
-            android:textSize="50dp" />
+            android:textSize="55sp" />
 
         <Button
             android:id="@+id/tavolo9"
@@ -154,7 +154,7 @@
             android:gravity="center"
             android:text="9"
             android:textColor="#FFFFFF"
-            android:textSize="55dp" />
+            android:textSize="55sp" />
 
         <Button
             android:id="@+id/tavolo12"
@@ -166,14 +166,14 @@
             android:gravity="center"
             android:text="12"
             android:textColor="#FFFFFF"
-            android:textSize="55dp" />
+            android:textSize="55sp" />
 
         <Button
             android:id="@+id/vedi_ordini"
             style="@style/ButtonStyle"
             android:layout_marginTop="20dp"
             android:background="@drawable/buttonstyleselector"
-            android:text="Ordini completati"
+            android:text="@string/ordini_completati"
              />
 
 
