--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,7 +17,7 @@
     
     <style name="TextViewStyle" parent="TextAppearance.AppCompat" >
         <item name="android:textColor">#fff2df</item>
-        <item name="android:textSize">23dp</item>
+        <item name="android:textSize">23sp</item>
         <item name="android:layout_width">300dp</item>
         <item name="android:gravity">center</item>
         <item name="android:layout_height">70dp</item>
